--- a/Hospital/Views/Admin/Index.cshtml
+++ b/Hospital/Views/Admin/Index.cshtml
@@ -3,47 +3,90 @@
 @model IEnumerable<AdminViewModel>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>All Admins</h1>
+<style>
+    table {
+        background-color: white;
+        width: 100%
+    }
 
-<a asp-action="Create" class="btn btn-success">Create Admin</a>
-<br />
+    .table-rounded {
+        border-collapse: separate;
+        border-spacing: 0;
+    }
+
+        .table-rounded th:first-child {
+            border-top-left-radius: 10px;
+        }
+
+        .table-rounded th:last-child {
+            border-top-right-radius: 10px;
+        }
+
+    .custom-row th {
+        text-align: left; /* Center text in header */
+        background-color: #cae0f1;
+        color: black;
+        font-weight:bold;
+        /* font-family: Arial, Helvetica, sans-serif */
+
+    }
+
+
+    td {
+        text-align: left;
+    }
+
+    .container {
+        max-width: 92%
+    }
+
+</style>
+
 
 @{
     if (Model.Count() > 0)
     {
+        <div class="container mt-5 ">
+            <h3>Admins</h3>
+            <br/>
+            <p><a asp-action="Create" class="btn" style="background-color:#0474cc; color:white">Create Admin</a></p>
+            <br/>
+            <div class="card-body">
+                <table class="table table-striped table-hover table-rounded">
 
-        <br />
-        <table class="table table-striped table-hover mt-3">
+                    <thead class="custom-row">
+                        <tr>
+                            <th>Id</th>
+                            <th>Email</th>
+                            <th>Details</th>
+                            <th>Update</th>
+                            <th>Delete</th>
 
-            <thead>
-                <tr>
-                    <td>Id</td>
-                    <td>Email</td>
-                    <td>Details</td>
-                    <td>Update</td>
-                    <td>Delete</td>
+                        </tr>
+                    </thead>
 
-                </tr>
-            </thead>
+                    <tbody>
+                        @foreach (var Admin in Model)
+                        {
+                            <tr>
+                                <td>@Admin.Id</td>
+                                <td>@Admin.Email</td>
 
-            <tbody>
-                @foreach (var Admin in Model)
-                {
-                    <tr>
-                        <td>@Admin.Id</td>
-                        <td>@Admin.Email</td>
+                                <td><a asp-action="Details" asp-route-id="@Admin.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
+                                <td><a asp-action="Edit" asp-route-id="@Admin.Id" class="text-warning"><i class="fas fa-edit"></i></a></td>
+                                <td><a asp-action="Delete" asp-route-id="@Admin.Id" class="text-danger"><i class="fas fa-trash"></i></a></td>
+                            </tr>
+                        }
+                    </tbody>
 
-                        <td><a asp-action="Details" asp-route-id="@Admin.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
-                        <td><a asp-action="Edit" asp-route-id="@Admin.Id" class="text-warning"><i class="fas fa-edit"></i></a></td>
-                        <td><a asp-action="Delete" asp-route-id="@Admin.Id" class="text-danger"><i class="fas fa-trash"></i></a></td>
-                    </tr>
-                }
-            </tbody>
-
-        </table>
+                </table>
+            </div>
+        </div>
+        
+        
     }
     else
     {
