--- a/Hospital/Views/Appointment/Create.cshtml
+++ b/Hospital/Views/Appointment/Create.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_PatientLayout.cshtml";
+
+
 }
 
 <style>
@@ -9,7 +12,7 @@
         font-size: 2em;
         margin-bottom: 20px;
         text-align: center;
-        color: #4A4A4A;
+        color: black;
     }
 
     .alert {
@@ -48,83 +51,112 @@
     .text-center {
         margin-top: 20px;
     }
+
+    .form-container {
+        width:700px;
+        margin: 0 auto;
+        border: 1px solid #ced4da; /* Light gray border */
+        border-radius: 8px; /* Rounded corners */
+        padding: 20px; /* Padding inside the box */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+        background-color: #fff; /* White background */
+ 
+
+    }
+
+
 </style>
 
-<div class="container mt-5">
-    <h1 class="form-title">Create Appointment</h1>
 
-    <h4>Appointment Details</h4>
-    <hr />
-
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            @if (!ViewData.ModelState.IsValid)
-            {
-                <div class="alert alert-danger">
-                    <h5>Model State Errors:</h5>
-                    <ul>
-                        @foreach (var state in ViewData.ModelState)
-                        {
-                            foreach (var error in state.Value.Errors)
-                            {
-                                <li>Error in @state.Key: @error.ErrorMessage</li>
-                            }
-                        }
-                    </ul>
-                </div>
-            }
-
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
-@*                 <input type="hidden" name="patientId" value="@Model.PatientId" />
- *@                <div class="form-group">
-                    <label asp-for="Specialization" class="control-label"></label>
-                    <select id="Specialization" asp-for="Specialization" class="form-control" asp-items="ViewBag.Specialization">
-                        <option value="">-- Select Specialization --</option>
-                    </select>
-                    <span asp-validation-for="Specialization" class="text-danger"></span>
+    <!-- Main Body Section -->
+    <div style=" margin-top:35px; background-image: url('../images/young-handsome-physician-medical-robe-with-stethoscope.jpg') ;background-size:cover; background-position: center;background-repeat:no-repeat; width:100%; height:350px">
+        <div class="container mt-5">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-section" style="margin-top:40px;">
+                    <h6 class="text-uppercase mb-2" style="color:#0474cc">FIND THE BEST DOCTORS</h6>
+                    <h1 class="display-4 font-weight-bold">Take the world's best quality Treatment</h1>
+                    <p class="mt-4 mb-4 text-muted">We offer top-notch aesthetic treatments tailored to meet your specific needs. Experience unparalleled care from the world's best professionals.</p>
+                    
                 </div>
 
-                <div class="form-group">
-                    <label asp-for="DoctorId" class="control-label"></label>
-                    <select asp-for="DoctorId" id="DoctorId" class="form-control">
-                        <option value="">-- Select Doctor --</option>
-                    </select>
-                    <span asp-validation-for="DoctorId" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label working-day-label">Working Days</label>
-                    <select id="WorkingDay" class="form-control" disabled>
-                        <option value="">-- Select Working Day --</option>
-                    </select>
-                    <span class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="PatientId" class="control-label"></label>
-                    <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId" disabled></select>
-                    <input type="hidden" asp-for="PatientId" />
-                    <span asp-validation-for="PatientId" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="Date" class="control-label"></label>
-                    <!-- Set the readonly attribute for the date input -->
-                    <input asp-for="Date" class="form-control" type="date" id="Date" readonly />
-                    <input type="hidden" id="HiddenDate" asp-for="Date" />
-                    <span asp-validation-for="Date" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary btn-block" />
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 
-    <div class="text-center mt-3">
-        <a asp-action="Index" class="btn btn-secondary btn-lg">Back to List</a>
+
+
+
+
+
+<div class="container mt-5">
+    <div class="form-container">
+        <h1 class="form-title">Book your appointment now!</h1>
+        <hr />
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger">
+                        <h5>Model State Errors:</h5>
+                        <ul>
+                            @foreach (var state in ViewData.ModelState)
+                            {
+                                foreach (var error in state.Value.Errors)
+                                {
+                                    <li>Error in @state.Key: @error.ErrorMessage</li>
+                                }
+                            }
+                        </ul>
+                    </div>
+                }
+
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+                    <div class="form-group">
+                        <label asp-for="Specialization" class="control-label"></label>
+                        <select id="Specialization" asp-for="Specialization" class="form-control" asp-items="ViewBag.Specialization">
+                            <option value="">-- Select Specialization --</option>
+                        </select>
+                        <span asp-validation-for="Specialization" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="DoctorId" class="control-label"></label>
+                        <select asp-for="DoctorId" id="DoctorId" class="form-control">
+                            <option value="">-- Select Doctor --</option>
+                        </select>
+                        <span asp-validation-for="DoctorId" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label working-day-label">Working Days</label>
+                        <select id="WorkingDay" class="form-control" disabled>
+                            <option value="">-- Select Working Day --</option>
+                        </select>
+                        <span class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="PatientId" class="control-label"></label>
+                        <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId" disabled></select>
+                        <input type="hidden" asp-for="PatientId" />
+                        <span asp-validation-for="PatientId" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Date" class="control-label"></label>
+                        <input asp-for="Date" class="form-control" type="date" id="Date" readonly />
+                        <input type="hidden" id="HiddenDate" asp-for="Date" />
+                        <span asp-validation-for="Date" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <br />
+                        <input type="submit" value="Book" class="btn btn-block" style="background-color:#0474cc; color:white" />
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -228,6 +260,7 @@
         });
     </script>
 }
+
 @section ValidationScriptSection
 {
     <partial name="_ValidationScriptsPartial" />
