--- a/Hospital/Views/Appointment/Delete.cshtml
+++ b/Hospital/Views/Appointment/Delete.cshtml
@@ -1,14 +1,18 @@
-﻿@model Hospital.Models.Appointment
+﻿@using System.Security.Claims
+@model Hospital.Models.Appointment
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_PatientLayout2.cshtml";
+
+
 }
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this </h3>
 <div>
-    <h4>Appointment</h4>
+    <h4>Appointment?</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -39,7 +43,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Cancel appointment" class="btn btn-danger" />
+        <a asp-action="UpcomingAppointmentsForPatient" asp-controller="Appointment" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Cancel</a>
     </form>
 </div>
