--- a/Hospital/Views/Appointment/HistoryForPatient.cshtml
+++ b/Hospital/Views/Appointment/HistoryForPatient.cshtml
@@ -2,32 +2,50 @@
 
 @{
     ViewData["Title"] = "Appointment History for Patient";
+    Layout = "~/Views/Shared/_PatientLayout.cshtml";
+
+
 }
 
-<h1>Appointment History for @ViewData["PatientName"]</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Doctor</th>
-            <th>Specialization</th>
-            <th>Date</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var appointment in Model)
-        {
-            <tr>
-                <td>@appointment.Doctor?.FirstName @appointment.Doctor?.LastName</td>
-                <td>@appointment.Specialization</td>
-                <td>@appointment.Date.ToString("g")</td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@appointment.Id">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<link href="~/css/tablestylesheet.css" rel="stylesheet" />
 
-<div>
-    <a asp-action="Index">Back to Appointments</a>
-</div>
+
+
+@if (Model.Any())
+                        {
+    <div class="container mt-5">
+        <h3 class="text-center mb-4">Appointment History for @ViewData["PatientName"]</h3>
+        <div class="card-body">
+            <table class="table table-striped table-hover table-rounded">
+                <thead class="custom-row">
+                    <tr>
+                        <th>Doctor</th>
+                        <th>Specialization</th>
+                        <th>Date</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                            @foreach (var appointment in Model)
+                            {
+                                <tr>
+                                    <td>@appointment.Doctor?.FirstName @appointment.Doctor?.LastName</td>
+                                    <td>@appointment.Specialization</td>
+                                    <td>@appointment.Date.ToString("g")</td>
+                                    <td><a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
+                                </tr>
+                            }
+
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+}
+else
+{
+    <div class="mt-5 alert alert-warning">
+        <h3>Your appointments history is empty</h3>
+    </div>
+}
