--- a/Hospital/Views/Appointment/Index.cshtml
+++ b/Hospital/Views/Appointment/Index.cshtml
@@ -2,50 +2,98 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <!-- You could add a dropdown or select option here to choose a specific patient -->
-    <a asp-action="Create" asp-route-patientId="e105a10c-2289-41ad-94cb-472d0764c889">Create New Appointment</a>
+<style>
+    table {
+        background-color: white;
+        width: 100%
+    }
 
-</p>
-<p>
-    <a asp-action="HistoryForPatient" asp-route-patientId="e105a10c-2289-41ad-94cb-472d0764c889">View Patient History</a>
-</p>
-<p>
-    <a asp-action="UpcomingAppointmentsForPatient" asp-route-patientId="e105a10c-2289-41ad-94cb-472d0764c889">View Patient Upcoming Appointments</a>
-</p>
-<p>  <a asp-action="HistoryForDoctor" asp-route-doctorId="D002">View Doctor History</a>
-</p>
-<p>
-    <a asp-action="UpcomingAppointmentsForDoctor" asp-route-doctorId="D002">View Doctor Upcoming Appointments</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Doctor</th>
-            <th>Patient</th>
-            <th>Specialization</th>
-            <th>Date</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.DoctorFullName</td>
-                <td>@item.PatientFullName</td>
-                <td>@item.Specialization</td>
-                <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+    .table-rounded {
+        border-collapse: separate;
+        border-spacing: 0;
+    }
+
+        .table-rounded th:first-child {
+            border-top-left-radius: 10px;
         }
-    </tbody>
-</table>
+
+        .table-rounded th:last-child {
+            border-top-right-radius: 10px;
+        }
+
+    .custom-row th {
+        text-align: left; /* Center text in header */
+        background-color: #cae0f1;
+        color: black;
+        /* font-family: Arial, Helvetica, sans-serif  */
+        font-weight:bold;
+    }
+
+    /*     #bbd7ec
+            #cae0f1
+         */
+
+    td {
+        text-align: left;
+    }
+
+    .container {
+        max-width: 92%
+    }
+
+</style>
+
+
+@{
+    if (Model.Count() > 0)
+    {
+
+        <div class="container mt-5 ">
+            <h3>Appointments</h3>
+            <br/>
+
+            <div class="card-body">
+
+                <table class="table table-striped table-hover table-rounded">
+                    <thead class="custom-row">
+                        <tr>
+                            <th>Doctor</th>
+                            <th>Patient</th>
+                            <th>Specialization</th>
+                            <th>Date</th>
+                            <th>Details</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@item.DoctorFullName</td>
+                                <td>@item.PatientFullName</td>
+                                <td>@item.Specialization</td>
+                                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                                <td><a asp-action="Details" asp-route-id="@item.Id" class="text-info"><i class="fas fa-eye"></i></a> </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+
+        
+    }
+    else
+    {
+        <div class="mt-5 alert alert-warning">
+            <h3>No Patients</h3>
+        </div>
+    }
+}
+
+
