--- a/Hospital/Views/Doctor/Create.cshtml
+++ b/Hospital/Views/Doctor/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
 <h1>Create</h1>
@@ -96,18 +96,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                @*<label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" type="file"/>
-                <span asp-validation-for="Image" class="text-danger"></span>*@
 
-
-                @*<label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" id="imageInput" class="form-control" type="file" onchange="convertImageToByteArray()" />
-                <input type="hidden" id="imageByteArray" name="ImageData" />
-                <span asp-validation-for="Image" class="text-danger"></span>*@
                 <label asp-for="Image" class="control-label"></label>
                 <input asp-for="Image" id="imageInput" class="form-control" type="file" onchange="convertImageToByteArray()" />
                 <input type="hidden" id="imageByteArray" name="ImageData" />
+
                 <!-- Image preview -->
                 <img id="imagePreview" src="#" alt="Image Preview" style="display:none; max-width: 300px; margin-top: 10px;" />
                 <span asp-validation-for="Image" class="text-danger"></span>
