--- a/Hospital/Views/Doctor/DetailsUser.cshtml
+++ b/Hospital/Views/Doctor/DetailsUser.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_DoctorLayout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>Details</h1>
+
 
 <div>
-    <h4>Doctor</h4>
+    <h4>Profile</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -96,6 +96,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="EditUser" asp-route-id="@Model?.Id" class="btn" style="background-color:#0474cc; color:white">Edit profile</a>
+     @* <a asp-action="Index" asp-route-id="@Model?.Id" class="btn btn-outline-secondary">Back</a>  *@
 </div>
