--- a/Hospital/Views/Doctor/EditUser.cshtml
+++ b/Hospital/Views/Doctor/EditUser.cshtml
@@ -1,8 +1,9 @@
-﻿@model Hospital.Models.Doctor
+﻿@using System.Security.Claims
+@model Hospital.Models.Doctor
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_DoctorLayout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 <div class="row">
     <div class="d-flex justify-content-center bg-white">
@@ -34,17 +35,22 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
-            <div class="form-group">
+
+@*             <div class="form-group">
                 <label asp-for="PasswordHash" class="control-label" >New Password</label>
                 <input asp-for="PasswordHash" class="form-control" value="" type="password"/>
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
+            </div> *@
+
+            <div>
+                <input type="submit" value="Save" class="btn btn-primary" style="margin: 10px 0px;" />
+                <a asp-action="DetailsUser" asp-controller="Doctor" asp-route-doctorId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Cancel</a>
             </div>
-            <div class="d-flex justify-content-center">
-                <input type="submit" value="Save" class="btn btn-primary" style="margin: 10px 0px;"/>
-            </div>
+
         </form>
     </div>
 </div>
+
 
 <script>
 
@@ -92,8 +98,3 @@
     }
 </script>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
