--- a/Hospital/Views/Doctor/IndexUser.cshtml
+++ b/Hospital/Views/Doctor/IndexUser.cshtml
@@ -1,102 +1,57 @@
 ﻿@model Hospital.Models.Doctor
 
 @{
-    ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_DoctorLayout.cshtml";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
-<style type="text/css">
-    body {
-        color: #2e323c;
-        background: #f5f6fa;
-       
-    }
-    .account-settings .user-profile {
-        margin: 0 0 1rem 0;
-        padding-bottom: 1rem;
-        text-align: center;
-    }
-    .account-settings .user-profile .user-avatar {
-        margin: 0 0 1rem 0;
-    }
-    .account-settings .user-profile .user-avatar img {
-        width: 90px;
-        height: 90px;
-        -webkit-border-radius: 100px;
-        -moz-border-radius: 100px;
-        border-radius: 100px;
-    }
-    .account-settings .user-profile h5.user-name {
-        margin: 0 0 0.5rem 0;
-    }
-    .account-settings .user-profile h6.user-email {
-        margin: 0;
-        font-size: 0.8rem;
-        font-weight: 400;
-        color: #9fa8b9;
-    }
-    .account-settings .about {
-        margin: 2rem 0 0 0;
-        text-align: center;
-    }
-    .account-settings .about h5 {
-        margin: 0 0 15px 0;
-        color: #007ae1;
-    }
-    .account-settings .about p {
-        font-size: 0.825rem;
-    }
-    .form-control {
-        border: 1px solid #cfd1d8;
-        -webkit-border-radius: 2px;
-        -moz-border-radius: 2px;
-        border-radius: 2px;
-        font-size: .825rem;
-        background: #ffffff;
-        color: #2e323c;
-    }
 
-    .card {
-        background: #ffffff;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-        border: 0;
-        margin-bottom: 1rem;
-    }
-</style>
 
-<div>
-    <H1 class="h1">Welcome Dr @Model.FirstName @Model.LastName</H1>
-    <div class="container">
-        <div class="row gutters">
-            <div class="">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <div class="account-settings">
-                            <div class="user-profile">
-                                <div class="user-avatar">
-                                    @{
-                                        string imageSrc = Model.Image == null ? "/images/Doctor.png" : $"data:image/jpeg;base64,{Convert.ToBase64String(Model.Image)}";
-                                    }
-                                    <img src=@imageSrc alt="Maxwell Admin">
-                                </div>
-                                <h5 class="user-name">@Model.FirstName @Model.LastName</h5>
-                                <h6 class="user-email"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" >@Model.Email</a></h6>
-                            </div>
-                            <div class="about">
-                                <h5>Expert</h5>
-                                in @Model.Specialization.Name
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewData["Title"] - MediCare</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="~/css/home.css">
+
+
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Hospital.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/LayoutStyleSheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+</head>
+<body>
+
+
+
+
+
+
+    <!-- Main Body Section -->
+
+    <div class="container mt-5">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-section">
+                <h6 class="text-uppercase text-primary mb-2">Your personalized dashboard is now ready.</h6>
+                <h1 class="display-4 font-weight-bold">Welcome Doctor @Model.FirstName @Model.LastName!</h1>
+                <p class="mt-4 mb-4 text-muted">You now have access to cutting-edge aesthetic tools and resources designed to support your expertise. We’re committed to helping you deliver the highest level of care to your patients with our advanced treatments.</p>
+               
+            </div>
+            @{
+                string imageSrc = Model.Image == null ? "/images/Doctor.png" : $"data:image/jpeg;base64,{Convert.ToBase64String(Model.Image)}";
+            }
+            <div class="col-md-6">
+                <img src=@imageSrc alt="Maxwell Admin">
             </div>
         </div>
+        @* </div> *@
     </div>
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
 
-    </script>
 
-</div>
+</body>
+</html>
