--- a/Hospital/Views/Role/Create.cshtml
+++ b/Hospital/Views/Role/Create.cshtml
@@ -2,7 +2,7 @@
 @model RoleViewModel
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
 <h1>Create New Role</h1>
@@ -19,7 +19,7 @@
 
 
         <input type="submit" value="Create" class="btn btn-primary" />
-        <a asp-action="Index" class="btn btn-light">Back to list</a>
+        <a asp-action="Index" class="btn btn-light">Back</a>
 
 
     </div>
