--- a/Hospital/Views/Role/Delete.cshtml
+++ b/Hospital/Views/Role/Delete.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
 <h1>Are you sure you want to delete this Role?</h1>
@@ -25,9 +25,9 @@
         <br />
 
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-light">Cancel</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Cancel</a>
 
-
+    </div>
 </form>
 
 
