--- a/Hospital/Views/Role/Edit.cshtml
+++ b/Hospital/Views/Role/Edit.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
 <h1>Edit @Model.RoleName Role</h1>
@@ -21,7 +21,7 @@
         <br />
 
         <input type="submit" value="Save" class="btn btn-primary" />
-        <a asp-action="Index" class="btn btn-light">Back to list</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Backt</a>
 
 
     </div>
