--- a/Hospital/Views/Specialization/Delete.cshtml
+++ b/Hospital/Views/Specialization/Delete.cshtml
@@ -2,14 +2,11 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Specialization</h4>
+    <h3>Are you sure you want to delete this Specialization ?</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -22,7 +19,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-outline-secondary">Cancel</a>
     </form>
 </div>
