--- a/Hospital/Views/Specialization/Details.cshtml
+++ b/Hospital/Views/Specialization/Details.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>Details</h1>
+<h3>Specialization Details</h3>
 
 <div>
-    <h4>Specialization</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,6 +20,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <br/>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn" style="background-color:#0474cc; color:white">Edit</a>
+    <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
 </div>
