--- a/Hospital/Views/Specialization/Edit.cshtml
+++ b/Hospital/Views/Specialization/Edit.cshtml
@@ -2,12 +2,12 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
 
-<h1>Edit</h1>
+@* <h1>Edit</h1> *@
 
-<h4>Specialization</h4>
+<h3>Edit Specialization</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,16 +19,19 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+          @*   <div class="form-group">
+                
+            </div> *@
+
+            <div>
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
