--- a/Hospital/Views/Appointment/Details.cshtml
+++ b/Hospital/Views/Appointment/Details.cshtml
@@ -56,9 +56,16 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
 
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Slot)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Slot)
+        </dd>
+
     </dl>
 
 </div>
 
-<a asp-action="Index" class="btn btn-outline-secondary">Back</a>
+@* <a asp-action="Index" class="btn btn-outline-secondary">Back</a> *@
 
