--- a/Hospital/Views/Appointment/Edit.cshtml
+++ b/Hospital/Views/Appointment/Edit.cshtml
@@ -69,17 +69,37 @@
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
+@* 
+            <div class="form-group">
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" type="date" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div> *@
+
+
+
+            <!-- Patient Info -->
+            <div class="form-group">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Slot)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Slot)
+                </dd>
+                <input type="hidden" asp-for="Slot" />
+            </div>
+
+
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="UpcomingAppointmentsForDoctor" asp-controller="Appointment" asp-route-doctorId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="UpcomingAppointmentsForDoctor" asp-controller="Appointment" asp-route-doctorId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Cancel</a>
-</div>
+
 
 @section Scripts {
     @{
