--- a/Hospital/Views/Doctor/Edit.cshtml
+++ b/Hospital/Views/Doctor/Edit.cshtml
@@ -11,97 +11,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-           @*  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="control-label">Working Days</label>
-                @foreach (var day in ViewBag.WeekDays)
-                {
-                    // Check if the day is selected
-                    bool isChecked = Model.WorkingDays.HasFlag((WeekDays)day.Id);
-                    <div class="form-check">
-                        <input type="checkbox"
-                               class="form-check-input"
-                               id="day_@day.Id"
-                               name="WorkingDays"
-                               value="@day.Id"
-                        @if (isChecked)
-                        {
-                            <text>checked</text>
-                        } />
-                        <label class="form-check-label" for="day_@day.Id">@day.Name</label>
-                    </div>
-                }
-            </div>
-
-
-            <div class="form-group">
-                <label asp-for="StartTime" class="control-label"></label>
-                <input asp-for="StartTime" class="form-control" type="time"/>
-                <span asp-validation-for="StartTime" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="EndTime" class="control-label"></label>
-                <input asp-for="EndTime" class="form-control" type="time"/>
-                <span asp-validation-for="EndTime" class="text-danger"></span>
-            </div>
-
-
+        <form asp-action="Edit" ,asp-route-id="@Model.Id">
             <input type="hidden" asp-for="Id" />
-
-
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-
-
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" />
-                <span asp-validation-for="Age" class="text-danger"></span>
-            </div>
-
-
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-
-
-
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" id="imageInput" class="form-control" type="file" onchange="convertImageToByteArray()" />
-                <input type="hidden" id="imageByteArray" name="ImageData" />
-                <!-- Image preview -->
-                @{ string imageSrc = Model.Image != null? $"data:image/jpeg;base64,{Convert.ToBase64String(Model.Image)}" : "#";}
-                <img id="imagePreview" src="@imageSrc" alt="Image Preview" style=" max-width: 300px; margin-top: 10px;/>
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Index"  class="btn btn-outline-secondary">cancel</a>
-            </div> *@
-
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">Working Days</label>
@@ -123,6 +34,10 @@
                     </div>
                 }
             </div>
+
+
+           
+
             <div class="form-group">
                 <label asp-for="StartTime" class="control-label"></label>
                 <input asp-for="StartTime" class="form-control" type="time" />
