--- a/Hospital/Views/Appointment/Create.cshtml
+++ b/Hospital/Views/Appointment/Create.cshtml
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="DoctorId" class="control-label"></label>
+                        <label  class="control-label">Doctor</label>
                         <select asp-for="DoctorId" id="DoctorId" class="form-control">
                             <option value="">-- Select Doctor --</option>
                         </select>
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="PatientId" class="control-label"></label>
+                        <label  class="control-label">Patient</label>
                         <select asp-for="PatientId" class="form-control" asp-items="ViewBag.PatientId" disabled></select>
                         <input type="hidden" asp-for="PatientId" />
                         <span asp-validation-for="PatientId" class="text-danger"></span>
