--- a/Hospital/Views/Appointment/Index.cshtml
+++ b/Hospital/Views/Appointment/Index.cshtml
@@ -90,8 +90,8 @@
     }
     else
     {
-        <div class="mt-5 alert alert-warning">
-            <h3>No Patients</h3>
+        <div class="mt-5 alert alert-warning text-center">
+            <h3>No Appointments</h3>
         </div>
     }
 }
