--- a/Hospital/Views/Appointment/UpcomingAppointmentsForDoctor.cshtml
+++ b/Hospital/Views/Appointment/UpcomingAppointmentsForDoctor.cshtml
@@ -57,8 +57,9 @@
                         <th>Patient</th>
                         <th>Specialization</th>
                         <th>Date</th>
+                        <th>Time</th>
                         <th>Details</th>
-                        <th>Edit</th>
+                        <th>Diagnose</th>
 
                     </tr>
                 </thead>
@@ -69,6 +70,7 @@
                             <td>@appointment.Patient?.FirstName @appointment.Patient?.LastName</td>
                             <td>@appointment.Specialization</td>
                             <td>@appointment.Date.ToString("yyyy-MM-dd")</td>
+                            <td>@appointment.Slot</td>
 
                             <td><a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
                             <td><a asp-action="Edit" asp-route-id="@appointment.Id" class="text-warning"><i class="fas fa-edit"></i></a></td>
