--- a/Hospital/Views/Home/ChooseRole.cshtml
+++ b/Hospital/Views/Home/ChooseRole.cshtml
@@ -5,7 +5,7 @@
 }
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<link href="~/css/layoutstylesheet.css" rel="stylesheet" />
+<link href="~/css/LayoutStyleSheet.css" rel="stylesheet" />
 <!-- Container for centering -->
 <div class="fullscreen-container">
     <div>
@@ -41,6 +41,9 @@
         padding: 10px 20px; /* Padding for button */
         font-size: 18px; /* Font size for button */
     }
+
+  
+
 </style>
 
 @section ValidationScriptSection
