--- a/Hospital/Views/Appointment/Create.cshtml
+++ b/Hospital/Views/Appointment/Create.cshtml
@@ -73,7 +73,7 @@
         <div class="container mt-5">
             <div class="row align-items-center">
                 <div class="col-md-6 text-section" style="margin-top:40px;">
-                    <h6 class="text-uppercase mb-2" style="color:#0474cc">FIND THE BEST DOCTORS</h6>
+                    <h6 class="text-uppercase mb-2" style="color:#0474cc">MEET OUR PROFESSIONAL DOCTORS</h6>
                     <h1 class="display-4 font-weight-bold">Take the world's best quality Treatment</h1>
                     <p class="mt-4 mb-4 text-muted">We offer top-notch aesthetic treatments tailored to meet your specific needs. Experience unparalleled care from the world's best professionals.</p>
                     
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label working-day-label">Working Days</label>
+                        <label class="control-label working-day-label">Day</label>
                         <select id="WorkingDay" class="form-control" disabled>
                             <option value="">-- Select Working Day --</option>
                         </select>
