--- a/Hospital/Views/Appointment/Delete.cshtml
+++ b/Hospital/Views/Appointment/Delete.cshtml
@@ -8,11 +8,10 @@
 
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this </h3>
+<h3>Are you sure you want to cancel this appointment? </h3>
 <div>
-    <h4>Appointment?</h4>
+
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -44,6 +43,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Cancel appointment" class="btn btn-danger" />
-        <a asp-action="UpcomingAppointmentsForPatient" asp-controller="Appointment" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Cancel</a>
+        <a asp-action="UpcomingAppointmentsForPatient" asp-controller="Appointment" asp-route-patientId="@User.FindFirstValue(ClaimTypes.NameIdentifier)" class="btn btn-outline-secondary">Back</a>
     </form>
 </div>
