--- a/Hospital/Views/Appointment/Edit.cshtml
+++ b/Hospital/Views/Appointment/Edit.cshtml
@@ -49,6 +49,31 @@
                 <input type="hidden" asp-for="Specialization" />
             </div>
 
+
+
+            <div class="form-group">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Date)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Date)
+                </dd>
+                <input type="hidden" asp-for="Date" />
+            </div>
+
+
+            <!-- Patient Info -->
+            <div class="form-group">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Slot)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Slot)
+                </dd>
+                <input type="hidden" asp-for="Slot" />
+            </div>
+
+
             <!-- Diagnosis -->
             <div class="form-group">
                 <label asp-for="Diagnosis" class="control-label"></label>
@@ -64,30 +89,13 @@
             </div>
 
             <!-- Date -->
-            <div class="form-group">
+@*             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-@* 
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" type="date" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div> *@
 
 
-
-            <!-- Patient Info -->
-            <div class="form-group">
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Slot)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Slot)
-                </dd>
-                <input type="hidden" asp-for="Slot" />
-            </div>
 
 
 
