--- a/Hospital/Views/Appointment/HistoryForDoctor.cshtml
+++ b/Hospital/Views/Appointment/HistoryForDoctor.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Appointment History for Doctor";
     Layout = "~/Views/Shared/_Admin&DoctorLayout.cshtml";
 }
-<link href="~/css/tablestylesheet.css" rel="stylesheet" />
+<link href="~/css/TableStyleSheet.css" rel="stylesheet" />
 
 
 @if (Model.Any())
 {
     <div class="container mt-5">
-        <h3 class="text-center mb-4">Appointment History for Dr. @ViewData["DoctorName"]</h3>
+        <h3 class="text-center mb-4">Your Appointments History</h3>
         <div class="card-body">
             <table class="table table-striped table-hover table-rounded">
                 <thead class="custom-row">
@@ -18,6 +18,8 @@
                         <th>Patient</th>
                         <th>Specialization</th>
                         <th>Date</th>
+                        <th>Time</th>
+                        <th>Details</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -26,9 +28,10 @@
                         <tr>
                             <td>@appointment.Patient?.FirstName @appointment.Patient?.LastName</td>
                             <td>@appointment.Specialization</td>
-                            <td>@appointment.Date.ToString("g")</td>
+                            <td>@appointment.Date.ToString("yyyy-MM-dd")</td>
+                            <td>@appointment.Slot</td>
                             <td>
-                                <a asp-action="Details" asp-route-id="@appointment.Id">Details</a>
+                                <a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a>
                             </td>
                         </tr>
                     }
