--- a/Hospital/Views/Appointment/HistoryForPatient.cshtml
+++ b/Hospital/Views/Appointment/HistoryForPatient.cshtml
@@ -7,14 +7,14 @@
 
 }
 
-<link href="~/css/tablestylesheet.css" rel="stylesheet" />
+<link href="~/css/TableStyleSheet.css" rel="stylesheet" />
 
 
 
 @if (Model.Any())
                         {
     <div class="container mt-5">
-        <h3 class="text-center mb-4">Appointment History for @ViewData["PatientName"]</h3>
+        <h3 class="text-center mb-4">Your Appointments History</h3>
         <div class="card-body">
             <table class="table table-striped table-hover table-rounded">
                 <thead class="custom-row">
@@ -22,6 +22,7 @@
                         <th>Doctor</th>
                         <th>Specialization</th>
                         <th>Date</th>
+                        <th>Time</th>
                         <th>Details</th>
                     </tr>
                 </thead>
@@ -32,7 +33,8 @@
                                 <tr>
                                     <td>@appointment.Doctor?.FirstName @appointment.Doctor?.LastName</td>
                                     <td>@appointment.Specialization</td>
-                                    <td>@appointment.Date.ToString("g")</td>
+                            <td>@appointment.Date.ToString("yyyy-MM-dd")</td>
+                                    <td>@appointment.Slot</td>  
                                     <td><a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
                                 </tr>
                             }
@@ -45,7 +47,7 @@
 }
 else
 {
-    <div class="mt-5 alert alert-warning">
+    <div class="mt-5 alert alert-warning text-center" style="width:60%; margin:auto">
         <h3>Your appointments history is empty</h3>
     </div>
 }
