--- a/Hospital/Views/Appointment/UpcomingAppointmentsForPatient.cshtml
+++ b/Hospital/Views/Appointment/UpcomingAppointmentsForPatient.cshtml
@@ -12,42 +12,53 @@
 
 </style>
 
-
-<div class="container mt-5">
-    <h3 class="text-center mb-4">Upcoming Appointments for @ViewData["PatientName"]</h3>
+@if (Model.Count() > 0)
+{
+    <div class="container mt-5">
+        <h3 class="text-center mb-4">Your Upcoming Appointments</h3>
         <div class="card-body">
-        <table class="table table-striped table-hover table-rounded">
+            <table class="table table-striped table-hover table-rounded">
                 <thead class="custom-row">
                     <tr>
                         <th>Doctor</th>
                         <th>Specialization</th>
                         <th>Date</th>
-                        <th>Detials</th>
-                        <th>Delete</th>
+                        <th>Time</th>
+                        <th>Details</th>
+                        <th>Cancel Appointment</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @if (Model.Any())
-                    {
-                        foreach (var appointment in Model)
-                        {
-                            <tr>
-                                <td>@appointment.Doctor?.FirstName @appointment.Doctor?.LastName</td>
-                                <td>@appointment.Specialization</td>
-                            <td>@appointment.Date.ToString("yyyy-MM-dd")</td>
 
-                                <td><a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
-                                <td><a asp-action="Delete" asp-route-id="@appointment.Id" class="text-danger"><i class="fas fa-trash"></i></a></td>
-                            </tr>
-                        }
-                    }
-                    else
+                    @foreach (var appointment in Model)
                     {
-                        <tr>
-                            <td colspan="5" class="text-center">No appointments</td>
-                        </tr>
+                    <tr>
+                        <td>@appointment.Doctor?.FirstName @appointment.Doctor?.LastName</td>
+                        <td>@appointment.Specialization</td>
+                        <td>@appointment.Date.ToString("yyyy-MM-dd")</td>
+                        <td>@appointment.Slot</td>
+
+                        <td><a asp-action="Details" asp-route-id="@appointment.Id" class="text-info"><i class="fas fa-eye"></i></a></td>
+                        <td><a asp-action="Delete" asp-route-id="@appointment.Id" class="text-danger"><i class="fas fa-trash"></i></a></td>
+                    </tr>
                     }
+
+
                 </tbody>
             </table>
         </div>
-</div>
+    </div>
+}
+
+
+ else
+{
+    <div class="mt-5 alert alert-warning text-center" style="width:60%; margin:auto">
+        <h3>No Scheduled Appointments</h3>
+    </div>
+
+
+@* <tr>
+    <td colspan="6" class="text-center">No appointments</td>
+</tr> *@
+}
