--- a/Hospital/Views/Role/Edit.cshtml
+++ b/Hospital/Views/Role/Edit.cshtml
@@ -21,7 +21,7 @@
         <br />
 
         <input type="submit" value="Save" class="btn btn-primary" />
-        <a asp-action="Index" class="btn btn-outline-secondary">Backt</a>
+        <a asp-action="Index" class="btn btn-outline-secondary">Back</a>
 
 
     </div>
