--- a/Hospital/Views/Shared/_AuthLayout.cshtml
+++ b/Hospital/Views/Shared/_AuthLayout.cshtml
@@ -43,5 +43,9 @@
 	@await RenderSectionAsync("ValidationScriptSection", required: true) @*no view implementing AuthLayout will be rendered without checking the client-side validation*@
 
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
+
+
 </body>
 </html>
